export const snapshot = {};

snapshot[`list_entries > can get all 1`] = `
[
  {
    created_at: 2024-05-23T12:27:41.625Z,
    creator_id: 54576635,
    entity: {
      emails: [
        "t@f.io",
        "f@f.io",
      ],
      first_name: "Fridel",
      id: 170614434,
      last_name: "Test",
      primary_email: "t@f.io",
      type: 0,
    },
    entity_id: 170614434,
    entity_type: 0,
    id: 158330673,
    list_id: 247888,
  },
  {
    created_at: 2024-05-23T12:27:19.526Z,
    creator_id: 54576635,
    entity: {
      emails: [
        "t@f.io",
        "f@f.io",
      ],
      first_name: "Fridel",
      id: 170614434,
      last_name: "Test",
      primary_email: "t@f.io",
      type: 0,
    },
    entity_id: 170614434,
    entity_type: 0,
    id: 158330668,
    list_id: 247888,
  },
  {
    created_at: 2024-05-23T12:27:09.733Z,
    creator_id: 54576635,
    entity: {
      emails: [
        "j@p-a.com",
        "j@f.com",
        "jf@j.com",
        "j@c.com",
        "jf@a.com",
      ],
      first_name: "Joscha",
      id: 54576635,
      last_name: "Feth",
      primary_email: "j@p-a.com",
      type: 1,
    },
    entity_id: 54576635,
    entity_type: 0,
    id: 158330666,
    list_id: 247888,
  },
]
`;

snapshot[`page 1 of entries 1`] = `
[
  {
    created_at: 2024-05-23T12:27:41.625Z,
    creator_id: 54576635,
    entity: {
      emails: [
        "t@f.io",
        "f@f.io",
      ],
      first_name: "Fridel",
      id: 170614434,
      last_name: "Test",
      primary_email: "t@f.io",
      type: 0,
    },
    entity_id: 170614434,
    entity_type: 0,
    id: 158330673,
    list_id: 247888,
  },
]
`;

snapshot[`page 2 of entries 1`] = `
[
  {
    created_at: 2024-05-23T12:27:19.526Z,
    creator_id: 54576635,
    entity: {
      emails: [
        "t@f.io",
        "f@f.io",
      ],
      first_name: "Fridel",
      id: 170614434,
      last_name: "Test",
      primary_email: "t@f.io",
      type: 0,
    },
    entity_id: 170614434,
    entity_type: 0,
    id: 158330668,
    list_id: 247888,
  },
]
`;

snapshot[`page 3 of entries 1`] = `
[
  {
    created_at: 2024-05-23T12:27:09.733Z,
    creator_id: 54576635,
    entity: {
      emails: [
        "j@p-a.com",
        "j@f.com",
        "jf@j.com",
        "j@c.com",
        "jf@a.com",
      ],
      first_name: "Joscha",
      id: 54576635,
      last_name: "Feth",
      primary_email: "j@p-a.com",
      type: 1,
    },
    entity_id: 54576635,
    entity_type: 0,
    id: 158330666,
    list_id: 247888,
  },
]
`;

snapshot[`page 4 of entries 1`] = `[]`;

snapshot[`list_entries > get > fetches a list entry by id 1`] = `
{
  created_at: 2017-02-22T23:22:21.125Z,
  creator_id: 123,
  entity: {
    emails: [
      "john.doe@example.com",
      "jdoe@stanford.edu",
    ],
    first_name: "John",
    last_name: "Doe",
    primary_email: "john.doe@example.com",
    type: 0,
  },
  entity_id: 987,
  id: 16367,
  list_id: 450,
}
`;

snapshot[`list_entries > create > creates a new list entry 1`] = `
{
  created_at: 2017-02-22T23:22:21.125Z,
  creator_id: 123,
  entity: {
    emails: [
      "jane.smith@example.com",
    ],
    first_name: "Jane",
    last_name: "Smith",
    primary_email: "jane.smith@example.com",
    type: 0,
  },
  entity_id: 38706,
  id: 12345,
  list_id: 450,
}
`;
